ajout route pour delete housing ajout mini css de rien du tout

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -1,6 +1,7 @@
-body {
-  background-color: black;
-}
-
-@import "navbar";
 @import "bootstrap/scss/bootstrap";
+@import "home";
+@import "navbar";
+
+body {
+  background-color: #ebebef;
+}
