--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,19 +23,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Accueil</a>
-                </li>
                 {% if app.user %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('logout')}}">Déconnexion</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Séjourner</a>
+                        <a class="nav-link" href="{{ path('app_booking') }}">Reservations</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('newHousing') }}">Devenir hôte</a>
                     </li>
+
 
                 {% else %}
                     <li class="nav-item">
