--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,5 +3,35 @@
 {% block title %}Home{% endblock %}
 
 {% block body %}
-    
+
+    {{ form_start(form) }}
+        <div class="row d-flex align-items-center">
+            <div class="col-2">
+                {{form_row(form.entryDate)}}
+            </div>
+            <div class="col-2">
+                {{form_row(form.exitDate)}}
+            </div>
+            <div class="col-3">
+                {{form_row(form.availablePlaces)}}
+            </div>
+            <div class="col-2">
+                {{form_row(form.category)}}
+            </div>
+            <div class="col-1">
+                {{form_row(form.Rechercher)}}
+            </div>
+        </div>
+    {{ form_end(form) }}
+
+    {% for housing in housings %}
+        <h2><a href="{{ path('housingDetails', {id:housing.id}) }}">{{ housing.title }}</a></h2>
+        <h3>{{ housing.city }}</h3>
+        <a href="#">{{ housing.category.name }}</a>
+        <p>{{ housing.adress }}</p>
+        <p>Places :{{ housing.availablePlaces }}</p>
+        <p>Prix : {{ housing.dailyPrice }}</p>
+    {% endfor %}
+
+
 {% endblock %}
