--- a/templates/navbar/nav.html.twig
+++ b/templates/navbar/nav.html.twig
@@ -10,7 +10,7 @@
 					</li>
 				{% if (is_granted('ROLE_USER')) %}
 					<li class="nav-item">
-						<a class="nav-link btn btn-outline-primary" aria-current="page" href="{{ path('add-housing') }}">Ajouter bien</a>
+						<a class="nav-link" aria-current="page" href="{{ path('add-housing') }}">Ajouter bien</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" aria-current="page" href="{{ path('user-housings') }}">Mes biens</a>
