--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,8 @@
 
 		{% block javascripts %}
 			{{ encore_entry_script_tags('app') }}
+			<link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.10.2/main.css' rel='stylesheet'/>
+			<script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.2/main.js"></script>
 		{% endblock %}
 	</head>
 	<body>
