--- a/templates/booking/reservation.html.twig
+++ b/templates/booking/reservation.html.twig
@@ -4,10 +4,14 @@
 
 {% block body %}
     <section class="container">
-        <h1>Enregistrer un logement</h1>
+        <h1>Reservation</h1>
         {{form_start(form)}}
         {{form_widget(form)}}
         <button class="btn-primary btn-lg">Enregistrer</button>
         {{form_end(form)}}
+        <br>
+        <a href="#" class="btn-primary-outline btn-lg">Voir dispo</a>
+
+        <div id='calendar' data-id="{{ housingId }}"></div>
     </section>
 {% endblock %}
